--- a/Advent2017/Advent2017.csproj
+++ b/Advent2017/Advent2017.csproj
@@ -45,6 +45,7 @@
     <Compile Include="DayFive.cs" />
     <Compile Include="DayFour.cs" />
     <Compile Include="DayOne.cs" />
+    <Compile Include="DaySeven.cs" />
     <Compile Include="DaySix.cs" />
     <Compile Include="DayThree.cs" />
     <Compile Include="DayTwo.cs" />
