--- a/Advent2017/Advent2017.csproj
+++ b/Advent2017/Advent2017.csproj
@@ -50,6 +50,7 @@
     <Compile Include="DaySix.cs" />
     <Compile Include="DayThree.cs" />
     <Compile Include="DayNine.cs" />
+    <Compile Include="DayTen.cs" />
     <Compile Include="DayTwo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
