day 11 done, naive approach to finding step count

--- a/Advent2017/Advent2017.csproj
+++ b/Advent2017/Advent2017.csproj
@@ -51,6 +51,7 @@
     <Compile Include="DayThree.cs" />
     <Compile Include="DayNine.cs" />
     <Compile Include="DayTen.cs" />
+    <Compile Include="DayEleven.cs" />
     <Compile Include="DayTwo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
