--- a/Advent2017/Advent2017.csproj
+++ b/Advent2017/Advent2017.csproj
@@ -52,6 +52,7 @@
     <Compile Include="DayNine.cs" />
     <Compile Include="DayTen.cs" />
     <Compile Include="DayEleven.cs" />
+    <Compile Include="DayTwelve.cs" />
     <Compile Include="DayTwo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
