--- a/Advent2017/Advent2017.csproj
+++ b/Advent2017/Advent2017.csproj
@@ -46,6 +46,7 @@
     <Compile Include="DayEight.cs" />
     <Compile Include="DayFive.cs" />
     <Compile Include="DayFour.cs" />
+    <Compile Include="DayFourteen.cs" />
     <Compile Include="DayOne.cs" />
     <Compile Include="DaySeven.cs" />
     <Compile Include="DaySix.cs" />
