--- a/Advent2017/Advent2017.csproj
+++ b/Advent2017/Advent2017.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DayEight.cs" />
+    <Compile Include="DayFifteen.cs" />
     <Compile Include="DayFive.cs" />
     <Compile Include="DayFour.cs" />
     <Compile Include="DayFourteen.cs" />
